@@ -1,3 +1,5 @@
+- fix to work with Strawberry Perl 5.28's LAPACK (#14) - thanks @aero for report
+
 0.30 2022-05-02
 - fix mpow to work with power 0 - https://perlmonks.org/?node_id=1229396
 
